# osu

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: .buildinfo  genindex.html  index.html  level_editor.html  main.html  modules.html  objects.inv  open_lvl.html  py-modindex.html  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree  level_editor.doctree  main.doctree  modules.doctree  open_lvl.doctree
docs/_sources/: index.rst.txt  level_editor.rst.txt  modules.rst.txt  open_lvl.rst.txt
docs/tutorial/: gameplay_tutorial.md
src/: level_editor.py  main.py  main_ver0.1.py  main_ver0.2.py  main_ver_0.3.py  open_lvl.py
src/levels/: Army of the night - Powerwolf.json  Zon - sindema24 ft gemini.json  barcals - 2Ita.json  carameldansen - Caramell.json  level_1.json  nyan cat - daniwellP.json
